--- a/components/Pagination.module.css
+++ b/components/Pagination.module.css
@@ -1,7 +1,7 @@
 .container {
     padding: 0 2rem;
 }
-    .grid {
+.grid {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -9,6 +9,10 @@
     max-width: 1100px;
     list-style-type: none;
 }
+.grid img{
+    background-color: grey;
+    width: 250px;
+  }
 
 .pageItem{
     padding: 5px;
