--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
 html,
 body {
-  background: #f2f2f2;
+  background: #F9F9F9;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
