--- a/components/Pagination.module.css
+++ b/components/Pagination.module.css
@@ -1,27 +1,30 @@
 .container {
-    padding: 0 2rem;
+    padding: 0;
+    margin: 0;
+    display: flex;
 }
 .grid {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: start;
     flex-wrap: wrap;
-    max-width: 1100px;
+    max-width: 100%;
     list-style-type: none;
+    /* border: 1px solid black; */
+    cursor: pointer;
 }
-.grid img{
-    background-color: grey;
-    width: 250px;
-  }
+
 
 .pageItem{
-    padding: 5px;
+    /* background-color: green; */
+    padding: 3px;
     margin: 3px;
-    background-color: #dadada;
-    border-radius: 5px;
-    border: 1px solid #eaeaea;
+    /* background-color: #dadada; */
+    /* border-radius: 5px;
+    border: 1px solid #eaeaea; */
     transition: color 0.15s ease, border-color 0.15s ease;
-    cursor: pointer;
+    /* cursor: pointer; */
+    font-size: large;
 
 }
 .pageItem:hover,
@@ -29,4 +32,9 @@
 .pageItem:active{
     color: rgb(253, 63, 63);
     border-color: rgb(253, 63, 63);
+}
+
+.currentPage{
+    color: red;
+    text-decoration: underline;
 }
