--- a/components/Pagination.module.css
+++ b/components/Pagination.module.css
@@ -5,8 +5,8 @@
 }
 .grid {
   display: flex;
-  align-items: flex-start;
-  justify-content: start;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   max-width: 100%;
   list-style-type: none;
